tests/ui/parser/eq-gt-to-gt-eq.stderr
error: expected `{`, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:8:10
   |
LL |     if a => b {}
   |          ^^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/eq-gt-to-gt-eq.rs:8:8
   |
LL |     if a => b {}
   |        ^
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     if a => b {}
LL +     if a >= b {}
   |

error: expected `{`, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:13:10
   |
LL |     if a => 1 {}
   |          ^^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/eq-gt-to-gt-eq.rs:13:8
   |
LL |     if a => 1 {}
   |        ^
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     if a => 1 {}
LL +     if a >= 1 {}
   |

error: expected `{`, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:18:10
   |
LL |     if 1 => a {}
   |          ^^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/eq-gt-to-gt-eq.rs:18:8
   |
LL |     if 1 => a {}
   |        ^
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     if 1 => a {}
LL +     if 1 >= a {}
   |

error: expected `{`, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:24:10
   |
LL |     if a => b && a != b {}
   |          ^^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/eq-gt-to-gt-eq.rs:24:8
   |
LL |     if a => b && a != b {}
   |        ^
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     if a => b && a != b {}
LL +     if a >= b && a != b {}
   |

error: expected `{`, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:30:20
   |
LL |     if a != b && a => b {}
   |                    ^^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/eq-gt-to-gt-eq.rs:30:8
   |
LL |     if a != b && a => b {}
   |        ^^^^^^^^^^^
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     if a != b && a => b {}
LL +     if a != b && a >= b {}
   |

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:36:15
   |
LL |     let _ = a => b;
   |               ^^ expected one of 8 possible tokens
   |
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     let _ = a => b;
LL +     let _ = a >= b;
   |

error: expected one of `!`, `.`, `::`, `?`, `{`, or an operator, found `=>`
  --> $DIR/eq-gt-to-gt-eq.rs:42:13
   |
LL |     match a => b {
   |     -----   ^^ expected one of `!`, `.`, `::`, `?`, `{`, or an operator
   |     |
   |     while parsing this `match` expression
   |
help: you might have meant to write a "greater than or equal to" comparison
   |
LL -     match a => b {
LL +     match a >= b {
   |

error: aborting due to 7 previous errors

